--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,6 @@
     "Audience": "DocumentVerificationSystemApiUsers",
     "ExpirationInHours": 24
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GeminiApiKey": "AIzaSyDmE-SLLvzPDHHw3m_phwWx_Q9Fe1yMvPo"
 }
