--- a/DocumentVerificationSystemApi.csproj
+++ b/DocumentVerificationSystemApi.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Key\" />
+  </ItemGroup>
+
 </Project>
